# carnation-harvesting-robot-ros2

./: .gitignore  AGENTS.md  README.md
docs/: PROJECT_BRIEF.md  resume_project_ROS2_summary.md  resume_robotics_project_summary.md
models/: README.md
src/carnation_description/: CMakeLists.txt  package.xml
src/carnation_description/config/: display.rviz
src/carnation_description/launch/: display.launch.py
src/carnation_description/meshes/: README.md  lower_arm_link.stl  upper_arm_link.stl
src/carnation_description/urdf/: carnation_robot_v0.urdf
src/carnation_interfaces/: CMakeLists.txt  package.xml
src/carnation_interfaces/msg/: FlowerDetection.msg
src/carnation_localization/: package.xml  setup.cfg  setup.py
src/carnation_localization/carnation_localization/: pixel_to_world_node.py  stereo_pixel_to_world_node.py
src/carnation_localization/config/: pixel_to_world.yaml  stereo_pixel_to_world.yaml
src/carnation_localization/launch/: localization_mvp.launch.py  stereo_localization.launch.py  vision_to_target_pose.launch.py
src/carnation_perception/: package.xml  setup.cfg  setup.py
src/carnation_perception/carnation_perception/: image_source_node.py  yolo_detector_node.py
src/carnation_perception/config/: image_source.yaml  yolo_detector.yaml
src/carnation_perception/launch/: perception_mvp.launch.py
src/carnation_planning/: package.xml  setup.cfg  setup.py
src/carnation_planning/carnation_planning/: simple_target_follower.py
src/carnation_planning/config/: simple_target_follower.yaml
src/carnation_planning/launch/: simple_alignment.launch.py
tools/: demo_stereo_from_single_image.py  screen_region_detect_yolov8m2.py  screen_region_frame_bridge.py  start_detect_yolov8m2_screen_region.bat  start_ros_screen_region_frame_bridge.bat  start_screen_region_frame_bridge.bat
