<?xml version="1.0"?>
<package format="3">
  <name>carnation_interfaces</name>
  <version>0.0.1</version>
  <description>Custom interfaces for carnation perception and localization.</description>

  <maintainer email="root@example.com">root</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
